--- a/mdk/Objects/Belief exp2.build_log.htm
+++ b/mdk/Objects/Belief exp2.build_log.htm
@@ -21,13 +21,18 @@ Target DLL:      CMSIS_AGDI.dll V1.33.16.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-g:\Robovigor\Hero_2024\mdk\infantry.uvprojx
+G:\Robovigor\Hero_2024\mdk\infantry.uvprojx
 Project File Date:  03/22/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'G:\Keil5\core\ARM\ARMCC\Bin'
 Build target 'Target 1'
 Note: source file '..\user\infantry\tasks.c' - object file renamed from '.\Objects\tasks.o' to '.\Objects\tasks_1.o'.
+compiling Driver_UI.c...
+compiling tasks.c...
+linking...
+Program Size: Code=46714 RO-data=1646 RW-data=2108 ZI-data=86596  
+FromELF: creating hex file...
 ".\Objects\Belief exp2.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -40,7 +45,7 @@ Package Vendor: Keil
 <h2>Collection of Component include folders:</h2>
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
